2013-06-20  Mark Lam  <mark.lam@apple.com>

        [Windows] Undoing r150621 to roll r150600 back in as the jsc test
        failures have been fixed in r151808.
        https://bugs.webkit.org/show_bug.cgi?id=116661.

        Reviewed by Brent Fulgham.

        * wtf/StackBounds.cpp:
        (WTF::StackBounds::initialize):

2013-06-20  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        HashSet: reverse the order of the template arguments at alternate 'find', 'contains' and 'add' methods
        https://bugs.webkit.org/show_bug.cgi?id=117830

        Reviewed by Anders Carlsson.

        The order of the template arguments at HashSet alternate 'find', 'contains' and
        'add' methods is reversed so that callers can just pass the translator
        and let the compiler deduce input argument type.

        * wtf/HashSet.h:
        * wtf/text/AtomicString.cpp:
        (WTF::addToStringTable):
        (WTF::findString):

2013-06-20  Roger Fong  <roger_fong@apple.com>

        Make Windows makefile copy build output to a different folder.
        <rdar://problem/14219184>.

        * WTF.vcxproj/WTF.make:

2013-06-19  Geoffrey Garen  <ggaren@apple.com>

        Remove the SegmentedVector inline segment to shrink CodeBlock by 6X
        https://bugs.webkit.org/show_bug.cgi?id=117808

        Reviewed by Oliver Hunt.

        SegmentedVector allocation isn't super hot, but we do tend to have many
        live SegmentedVectors at runtime, particularly in CodeBlocks, so the
        right tradeoff is to allocate segments out-of-line as needed.

        This reduces startup memory usage @ google.com by about 6MB.

        No regression on SunSpider.

        * wtf/SegmentedVector.h:
        (WTF::SegmentedVector::SegmentedVector):
        (WTF::SegmentedVector::at):
        (WTF::SegmentedVector::append):
        (WTF::SegmentedVector::removeLast):
        (WTF::SegmentedVector::clear):
        (WTF::SegmentedVector::deleteAllSegments): No more inline segment.
